objects/DMAPP__DM_DVLS_Question__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the eLearning questions. These can accessed as a detail section on the Component page.</description>
    <fields>
        <fullName>DMAPP__DVLS_Component__c</fullName>
        <label>Dealmaker Component</label>
        <referenceTo>DMAPP__DM_DVLS_Component__c</referenceTo>
        <relationshipLabel>Test Questions</relationshipLabel>
        <relationshipName>DM_DVLS_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Multiple_Choice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Choice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ref_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ref ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Review_Tip__c</fullName>
        <label>Review Tip</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Question</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Test Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>